# axum-ote

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  async.txt  benchmark.yml  go.mod  go.sum  main.go  railway.json  sync.txt
dataloader/: dataloader.go  dataloader_test.go
src/: data_loader.rs  html_render.rs  main.rs  web_server.rs
src/web_server/: builder.rs  conditions.rs  css_gen.rs  html_render.rs  mod.rs  state.rs
storage/: storage.go  storage_test.go
webserver/: conditions.go  conditions_test.go  consumption.go  consumption_test.go  cssgen.go  cssgen_test.go  htmlrender.go  htmlrender_test.go  routes_test.go  state.go  webserver.go
webserver/templates/: layout.html
