[package]
name = "ote"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "*"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
