[package]
name = "ote"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
chrono = { version = "*", features = ["serde"] }
clap = { version = "*", features = ["derive"] }
log = "0.4.22"
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "*"
thiserror = "1.0.64"
tokio = { version = "1", features = ["full"] }
maud = { version = "*", features = ["axum"] }
env_logger = "0.11.5"
dashmap = "6.1.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
