[package]
name = "ote"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
chrono = { version = "*", features = ["serde"] }
clap = { version = "*", features = ["derive"] }
log = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "*"
thiserror = "*"
tokio = { version = "1", features = ["full"] }
maud = { version = "*", features = ["axum"] }
env_logger = "*"
dashmap = "*"
json5 = "*"
chrono-tz = "*"

[profile.release]
strip = true
lto = true
codegen-units = 1
